<resources>
    <string name="app_name">Compatible</string>
    <string name="action_settings">Settings</string>
    <string name="key">65e8cf8e51dbd1e999dabb56f569651a</string>
    <string name="weather">Weather</string>
    <string name="today">Retrofit</string>
    <string name="day5">Picasso</string>
    <string name="day16">Volley</string>
    <string name="current_temperature">Current temperature: </string>
    <string name="humidity">Humidity:</string>
    <string name="atmospheric_pressure">Atmospheric pressure: </string>
    <string name="wind">Wind:</string>

    <string name="donut">
        Android 1.6 \"Donut\" is a version of the open source Android mobile operating system developed by Google,
        that is no longer supported. Among the more prominent features introduced with this update were added support
        for CDMA smartphones, additional screen sizes, a battery usage indicator, and a text-to-speech engine.
        After the public release of Donut—its official dessert-themed code name, the convention employed by Google
        to designate major Android versions—carriers were quick to follow with its roll out to customers in the form
        of an over-the-air (OTA) update for compatible smartphones.
    </string>
    <string name="eclair">
        Android \"Eclair\" is a codename of the Android mobile operating system developed by Google,
        for the no longer supported versions 2.0 to 2.1. Unveiled on October 26, 2009, Android 2.1 builds upon
        the significant changes made in Android 1.6
    </string>
    <string name="froyo">
        Android \"Froyo\" is a codename of the Android mobile operating system developed by Google,
        spanning versions between 2.2 and 2.2.3. Those versions are no longer supported.
        It was unveiled on May 20, 2010, during the Google I/O 2010 conference. One of the most prominent changes
        in the Froyo release was USB tethering and Wi-Fi hotspot functionality. Other changes include
        support for the Android Cloud to Device Messaging (C2DM) service, enabling push notifications,
        Additional application speed improvements, implemented through JIT compilation and displayed within
        applications as top-of-the-screen banners. As of January 9, 2016 statistics issued by Google indicate that
        less than 0.1% of all Android devices accessing Google Play run Froyo, effectively meaning that this
        version is no longer in use.
    </string>
    <string name="ginger">
        Android \"Gingerbread\" is a codename of the Android mobile operating system developed by Google and
        released in December 2010, for versions that are no longer supported. The Gingerbread release introduced
        support for near field communication (NFC)—used in mobile payment solutions—and Session Initiation Protocol
        (SIP)—used in VoIP internet telephony. Gingerbread\'s user interface was refined in many ways, making it
        easier to master, faster to use, and more power-efficient. A simplified color scheme with a black background
        gave vividness and contrast to the notification bar, menus, and other user interface components. Improvements
        in menus and settings resulted in easier navigation and system control.The Nexus S smartphone,
        released in 2010, was the first phone from the Google Nexus line that ran Gingerbread, and also the first one
        from the line with built-in NFC functionality. Gingerbread uses version 2.6.35 of the Linux kernel.
        As of September 5, 2016, statistics issued by Google indicate that 1.5% of all Android devices accessing
        Google Play run Gingerbread.
    </string>
    <string name="honey">
        Android \"Honeycomb\" is a codename for the Android platform that was designed for devices with larger
        screen sizes, particularly tablets. It is no longer supported (newer versions are). Honeycomb debuted with
        the Motorola Xoom in February 2011. Besides the addition of new features, Honeycomb introduced a new
        so-called \"holographic\" user interface theme and an interaction model that built on the main features
        of Android, such as multitasking, notifications and widgets.
    </string>
    <string name="icecream">
        Android \"Ice Cream Sandwich\" is a codename for the Android mobile operating system developed by Google,
        that is no longer supported. Unveiled on October 19, 2011, Android 4.0 builds upon the significant changes
        made by the tablet-only release Android Honeycomb, in an effort to create a unified platform for both
        smartphones and tablets, whilst simplifying and modernizing the overall Android experience around a
        new set of human interface guidelines. As part of these efforts, Android 4.0 introduced a new visual
        appearance codenamed \"Holo\", which is built around a cleaner, minimalist design, and a new default
        typeface named Roboto. The Ice Cream Sandwich release also introduced a number of other new features,
        including a refreshed home screen, near-field communication (NFC) support and the ability to \"beam\"
        content to another user using the technology, an updated web browser, a new contacts manager with social
        network integration, the ability to access the camera and control music playback from the lock screen,
        visual voicemail support, face recognition for device unlocking (\"Face Unlock\"), the ability to monitor
        and limit mobile data usage, and other internal improvements. Android 4.0 received positive reviews
        by critics, who praised the cleaner, revamped appearance of the operating system in comparison to previous
        versions, along with its improved performance and functionality. However, critics still felt that some
        of Android 4.0\'s stock apps were still lacking in quality and functionality in comparison to third-party
        equivalents, and regarded some of the operating system\'s new features, particularly the \"face unlock\"
        feature, as being gimmicks.
    </string>
    <string name="jellybean">
        Android \"Jelly Bean\" is the codename given to three major point releases of the Android mobile operating
        system developed by Google, spanning versions between 4.1 and 4.3.1, that are no longer supported. The first
        of these three, 4.1, was unveiled at Google\'s I/O developer conference in June 2012, focusing on performance
        improvements designed to give the operating system a smoother and more responsive feel, improvements to the
        notification system allowing for \"expandable\" notifications with action buttons, and other internal changes.
        Two more releases were made under the Jelly Bean name in October 2012 and July 2013 respectively, including
        4.2—which included further optimizations, multi-user support for tablets, lock screen widgets, quick settings,
        and screen savers, and 4.3—contained further improvements and updates to the underlying Android platform.
    </string>
    <string name="kitkat">
        Android \"KitKat\" is a codename for the Android mobile operating system developed by Google,
        spanning versions between 4.4 and 4.4.4, that are no longer supported. Unveiled on September 3, 2013,
        KitKat focused primarily on optimizing the operating system for improved performance on entry-level devices
        with limited resources.
    </string>
    <string name="lollipop">
        Android \"Lollipop\" is a codename for the Android mobile operating system developed by Google, spanning
        versions between 5.0 and 5.1.1, that are no longer supported[citation needed]. Unveiled on June 25, 2014
        at the Google I/O 2014 conference, it became available through official over-the-air (OTA) updates on
        November 12, 2014, for select devices that run distributions of Android serviced by Google (such as Nexus
        and Google Play edition devices). Its source code was made available on November 3, 2014. One of the most
        prominent changes in the Lollipop release is a redesigned user interface built around a design language
        known as Material Design, which was made to retain a paper-like feel to the interface. Other changes
        include improvements to the notifications, which can be accessed from the lockscreen and displayed within
        applications as top-of-the-screen banners. Google also made internal changes to the platform, with the
        Android Runtime (ART) officially replacing Dalvik for improved application performance, and with changes
        intended to improve and optimize battery usage. As of November 2016, statistics issued by Google indicate
        that 34% of all Android devices accessing Google Play run Lollipop. Lollipop is succeeded by Marshmallow,
        which was released in October 2015.
    </string>
    <string name="marshmallow">
        Android \"Marshmallow\" (codenamed Android M during development) is the sixth major version of the Android
        operating system. First released as a beta build on May 28, 2015, it was officially released on October 5,
        2015, with Nexus devices being the first to receive the update. Marshmallow primarily focuses on improving
        the overall user experience of its predecessor, Lollipop. It introduced a new permissions architecture, new
        APIs for contextual assistants (first used by a new feature \"Now on Tap\" to provide context-sensitive
        search results), a new power management system that reduces background activity when a device is not being
        physically handled, native support for fingerprint recognition and USB Type-C connectors, the ability to
        migrate data and applications to a microSD card, and other internal changes. As of 6 March 2017, 31.3% of
        devices accessing Google Play run Android 6.0.
    </string>
</resources>
